Update @modules support